minor css spacing fix

--- a/themes/beautiful-hexo/source/css/main.css
+++ b/themes/beautiful-hexo/source/css/main.css
@@ -2,21 +2,19 @@
 
 /* --- General --- */
 
-html,body
-{
+html,body {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+    font-family: 'Lora', 'Times New Roman', serif;
+    font-size: 18px;
+    background: #FFF;
+    color: #404040;
+    position: relative;
 }
-body {
-  font-family: 'Lora', 'Times New Roman', serif;
-  font-size: 18px;
-  color: #404040;
-  position: relative;
-  background: #FFF;
-}
+
 p {
   line-height: 1.5;
   margin: 30px 0;
@@ -268,7 +266,7 @@ footer .theme-by {
 
 @media only screen and (min-width: 768px) {
   .post-preview {
-    padding: 20px 0 5px;
+    padding: 30px 0 10px;
   }
 }
 
